--- a/src/BookStore.Domain.Shared/Localization/BookStore/en.json
+++ b/src/BookStore.Domain.Shared/Localization/BookStore/en.json
@@ -27,9 +27,15 @@
     "Enum:BookType.6": "Science",
     "Enum:BookType.7": "Science fiction",
     "Enum:BookType.8": "Poetry",
-    "Books": "Books ar",
+    "Books": "Books ",
     "BookDeletionConfirmationMessage": "Are you sure to delete the book '{0}'?",
-    "SuccessfullyDeleted": "Successfully deleted!"
+    "SuccessfullyDeleted": "Successfully deleted!",
+    "Permission:BookStore": "Book Store",
+    "Permission:Books": "Book Management",
+    "Permission:Books.Create": "Creating new books",
+    "Permission:Books.Edit": "Editing the books",
+    "Permission:Books.Delete": "Deleting the books"
+
 
   }
 }
