--- a/src/BookStore.Domain.Shared/Localization/BookStore/ar.json
+++ b/src/BookStore.Domain.Shared/Localization/BookStore/ar.json
@@ -34,7 +34,7 @@
     "Permission:Books": "Book Management ar",
     "Permission:Books.Create": "Creating new books ar",
     "Permission:Books.Edit": "Editing the books ar",
-    "Permission:Books.Delete": "Deleting the books ar"
-
+    "Permission:Books.Delete": "Deleting the books ar",
+    "BookStore:00001": "There is already an author with the same name: {name} ar"
   }
 }
