--- a/src/BookStore.Domain.Shared/Localization/BookStore/en.json
+++ b/src/BookStore.Domain.Shared/Localization/BookStore/en.json
@@ -9,6 +9,9 @@
     "Actions": "Actions",
     "Close": "Close",
     "Delete": "Delete",
+
+
+
     "Edit": "Edit",
     "PublishDate": "Publish date",
     "NewBook": "New book",
@@ -34,8 +37,9 @@
     "Permission:Books": "Book Management",
     "Permission:Books.Create": "Creating new books",
     "Permission:Books.Edit": "Editing the books",
-    "Permission:Books.Delete": "Deleting the books"
-
+    "Permission:Books.Delete": "Deleting the books",
+  
+    "BookStore:00001": "There is already an author with the same name: {name}"
 
   }
 }
